# chatgpt-discord-bot

./: .gitignore  Dockerfile  README.md  config.example.json  pyproject.toml  requirements.txt
.github/: FUNDING.yml
chatgpt_discord_bot/: __init__.py  __main__.py
chatgpt_discord_bot/cogs/: chatgpt.py  fun.py  general.py  moderation.py  owner.py  template.py
chatgpt_discord_bot/database/: schema.sql
chatgpt_discord_bot/helpers/: checks.py  db_manager.py  keyring.py  openai.py  secrets.py  utils.py
